--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -299,7 +299,7 @@ span.post-name a,span.post-read-more a:hover {
 }
 .article-post {
     font-family: "Spectral", Georgia, Times, "Times New Roman", serif;
-    font-size: 1.18em;
+    font-size: 22px;
     line-height: 1.64; // 1.86
 	color:rgba(0,0,0,.8);
     code {
