--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,17 +45,15 @@ gtag('config', '{{site.ganalytics}}');
         <div class="container">
 
           <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
-            {% if site.logo %}
               <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo"> 
-            {% else %}
-              <span class="d-none d-md-inline-block">{{ site.title }}</span>
-            {% endif %}
           </a> | 
-          
 
           <div class="d-flex align-items-center">
-            
-            <span class="ml-3 text-muted small">{{site.title}}</span>
+
+            <a href="{{site.baseurl}}/">
+              <!-- <span class="ml-3 text-muted small">{{site.title}}</span> -->
+              <span class="ml-3 d-none d-md-inline-block">{{ site.title }}</span>
+            </a>            
 
             <!-- Social icons -->
             {% for s in site.social %}
