--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -8,6 +8,7 @@
         <h2 class="card-title h4 serif-font"><a href="{{ post.url | absolute_url }}">{{ post.title }}</a></h2>
 
         {% if post.featured == true %}
+            <p class="card-text text-muted">{{ post.subtitle | strip_html }}</p>
             <p class="card-text text-muted">{{ post.excerpt | strip_html | truncatewords:15 }}</p>
         {% else %}
             <p class="card-text text-muted">{{ post.excerpt | strip_html | truncatewords:25 }}</p>
