--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,5 +30,9 @@
             <br>
         {% endfor %}
     </div> -->
+
+    {% comment %}
+         <!-- Meter posts featured -->
+    {% endcomment %}
     
 </div>
