--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -228,8 +228,8 @@ small, .small {
 }
 .author-thumb {
     object-position: center;
-    width: 50px;
-    height: 50px;
+    width: 72px;
+    height: 72px;
     margin-right: 9px;
     border-radius: 100%;
     border: 2px solid #eaeaea;
@@ -240,10 +240,10 @@ small, .small {
 	margin-bottom: 1rem;
     margin-top: 3rem;
 }
-.post-top-meta .author-thumb {
-	width:72px;
-	height:72px;
-}
+// .post-top-meta .author-thumb {
+// 	width:72px;
+// 	height:72px;
+// }
 .post-top-meta.authorpage .author-thumb {
 	margin-top:40px;
 }
@@ -289,7 +289,10 @@ span.post-name a,span.post-read-more a:hover {
 }
 .mainheading h1.posttitle {
 	font-weight:700;
-	margin-bottom:2rem;
+	// margin-bottom:.7rem;
+}
+.mainheading .postsubtitle {
+	font-weight:400;
 }
 .link-dark {
 	color:rgba(0,0,0,.8);
