--- a/_includes/boton_substack.html
+++ b/_includes/boton_substack.html
@@ -1,4 +1,8 @@
-<a class="nav-link px-3 ml-2 btn btn-dark text-white px-3" alt="Recibe nuestra newsletter" target="_blank"  href="https://permaprendices.substack.com/subscribe">
-    <i class="fa-regular fa-envelope fa-fw" aria-hidden="true"></i>
+<a class="nav-link px-3 ml-2 btn btn-dark text-white px-3" 
+   alt="Recibe nuestra newsletter"
+   target="_blank"
+   href="https://permaprendices.substack.com/subscribe"
+>
+    <i class="fa-solid fa-envelope fa-fw" aria-hidden="true"></i>
     Recibe nuestra newsletter
 </a>
