--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,15 +7,25 @@
             <div id="mc_embed_signup_scroll">
                 <h2>Suscríbete a nuestra newsletter en substack</h2>
             </div>
-            <div id="custom-substack-embed"></div>
         </div>
-        {% include boton_substack.html %}
+        
+        {% comment %}
+            <!-- Boton casero -->
+            {% include boton_substack.html %}
+        {% endcomment %}
+            
+        <!-- Boton molón -->
+        {% include sub_substack.html %}
     </div>
     
     <div class="sidebar-section">
         <h5><span>Apóyanos</span></h5>
         <div class="text-center">
-            {% include paypal.html %}
+            {% comment %}
+                {% include paypal.html %}
+            {% endcomment %}
+
+            {% include boton_paypal.html %}
         </div>
     </div>
 
