--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@ layout: default
 <div class="col-lg-11 mx-auto">
 
   <div class="mainheading">
-    <h1 class="posttitle">{{ page.title }}</h1>
+    <h1 class="posttitle text-center">{{ page.title }}</h1>
   </div>
 
   <div class="article-post serif-font">
@@ -22,31 +22,53 @@ layout: default
 
         <!-- Este div estará visible en pantallas medianas (md) o más grandes -->
         <div class="col-md-6 d-none d-md-block">
-          <img src="/assets/images/marta.png" alt="nosotros" />
+          <div class="card">
+            <img class="rounded mb-4" src="/assets/images/marta.png" alt="Marta">
+            <div class="card-block">
+              <p class="card-text text-muted">
+                {{ page.marta_text }}
+              </p>
+            </div>
+          </div>
         </div>
         
         <div class="col-md-6 d-none d-md-block">
-          <img src="/assets/images/andreu.png" alt="nosotros" />
+          <div class="card">
+            <img class="rounded mb-4" src="/assets/images/andreu.png" alt="Andreu">
+            <div class="card-block">
+              <p class="card-text text-muted">
+                {{ page.andreu_text }}
+              </p>
+            </div>
+          </div>
         </div>
               
         <!-- Este div estará visible solo en pantallas pequeñas (sm) -->
         <div class="col-md-12 d-block d-md-none">
-          <img src="/assets/images/marta-arriba.png" alt="nosotros" />
+          <div class="card">
+            <img class="rounded mb-4" src="/assets/images/marta-arriba.png" alt="Marta2">
+            <div class="card-block">
+              <p class="card-text text-muted">
+                {{ page.marta_text }}
+              </p>
+            </div>
+          </div>
         </div>
         
         <div class="col-md-12 d-block d-md-none">
-          <img src="/assets/images/andreu-abajo.png" alt="nosotros" />
+          <div class="card">
+            <img class="rounded mb-4" src="/assets/images/andreu-abajo.png" alt="Andreu2">
+            <div class="card-block">
+              <p class="card-text text-muted">
+                {{ page.andreu_text }}
+              </p>
+            </div>
+          </div>
         </div>
       
       </div>
 
     {{content}}
-  </div>
 
-  {% if page.comments == true %}
-  <div id="comments">             
-      {% include disqus.html %} 
   </div>
-  {% endif %}
-
 </div>
