--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
         
         <div id="mc_embed_signup">
             <div id="mc_embed_signup_scroll">
-                <h2>Suscríbete a nuestra newsletter en substack</h2>
+                <h2>Suscríbete a nuestra newsletter en Substack</h2>
             </div>
         </div>
         
