--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,16 +44,19 @@ gtag('config', '{{site.ganalytics}}');
     <nav class="navbar navbar-expand-lg">
         <div class="container">
 
-          <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
-              <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo"> 
-          </a> | 
-
           <div class="d-flex align-items-center">
+          
+            <a class="navbar-brand text-dark font-weight-bold big" href="{{site.baseurl}}/">
+              <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo"> 
+            </a>
+            
+            <!-- d-none d-md-block -->
+            <div class=""> | </div>
 
-            <a href="{{site.baseurl}}/">
-              <!-- <span class="ml-3 text-muted small">{{site.title}}</span> -->
-              <span class="ml-3 d-none d-md-inline-block">{{ site.title }}</span>
-            </a>            
+              <a href="{{site.baseurl}}/">
+                <!-- <span class="ml-3 text-muted small">{{site.title}}</span> -->
+                <span class="ml-3 d-none d-md-inline-block">{{ site.title }}</span>
+              </a>            
 
             <!-- Social icons -->
             {% for s in site.social %}
@@ -100,6 +103,7 @@ gtag('config', '{{site.ganalytics}}');
 <!-- Footer  -->    
 <footer class="footer container text-center">  
 
+  {% comment %}
   <!-- CREDITS BEGIN.-->
   <!-- If you want to support my work, please donate to remove the credits. This helps me keep it up and running: https://www.wowthemes.net/donate/ -->
   <div class="credits mx-auto text-center mb-3">
@@ -108,6 +112,7 @@ gtag('config', '{{site.ganalytics}}');
     </a>
   </div>
   <!-- CREDITS END -->
+  {% endcomment %}
 
   <ul class="p-0 mb-1 small">
     {% for item in site.data.menus.footermenu %}
