--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -297,6 +297,8 @@ span.post-name a,span.post-read-more a:hover {
 .link-dark {
 	color:rgba(0,0,0,.8);
 }
+.substack-color { color:#FF6719; }
+.pexels-color { color:#05a081; }
 .article-post>*{
     margin-bottom:1.5rem;
 }
