--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,10 +10,10 @@ layout: default
 {% endif %}
 <!-- End Featured Image -->
 
-<div class="col-lg-11 mx-auto">
+<div class="mx-auto">
 
   <div class="mainheading">
-    <h1 class="posttitle text-center">{{ page.title }}</h1>
+    <h1 class="posttitle text-center mb-3">{{ page.title }}</h1>
   </div>
 
   <div class="article-post serif-font">
