--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,13 +117,18 @@ gtag('config', '{{site.ganalytics}}');
   <ul class="p-0 mb-1 small">
     {% for item in site.data.menus.footermenu %}
     <li>
-      <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
+      <a
+        href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}"
+        {% if item.class %}class="{{item.class}}"{% endif %}
+        alt="{{item.title}}">
+        {{item.title}}
+      </a>
     </li>
     {% endfor %}
     </ul>
-    <!-- <div class="copyright small">
-       Copyright © {{site.title}}. All rights reserved.
-    </div> -->
+    <div class="copyright small">
+       {{site.title}} {{ "now" | date: "%Y" }}
+    </div>
 </footer>
 
 <!-- JavaScript
