--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -306,8 +306,11 @@ span.post-name a,span.post-read-more a:hover {
 .link-dark {
 	color:rgba(0,0,0,.8);
 }
+
 .substack-color { color:#FF6719; }
 .pexels-color { color:#05a081; }
+.permap-color { color:#d1d1b7; }
+
 .article-post>*{
     margin-bottom:1.5rem;
 }
