--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}">
 
-<title>{{ page.title }} | {{site.title}}</title>
+<title>{{ page.title }} | {{ site.title }}</title>
 
 {% seo %}
 
@@ -127,7 +127,7 @@ gtag('config', '{{site.ganalytics}}');
     {% endfor %}
     </ul>
     <div class="copyright small">
-       {{site.title}} {{ "now" | date: "%Y" }}
+       {{site.title}} {{ site.time | date: "%Y" }}
     </div>
 </footer>
 
