--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -32,7 +32,7 @@ body {
 .serif-font {
     font-family: "Spectral";
 }
-@media (max-width: 1366px) {
+@media (min-width: 1366px) {
     .container-xl, .container-lg, .container-md, .container-sm, .container {
         width:90%;
         max-width:90%;
