Ajustes de tamaño y añadido bluesky

--- a/_includes/boton_paypal.html
+++ b/_includes/boton_paypal.html
@@ -3,6 +3,6 @@
    target="_blank"
    href="https://www.paypal.com/paypalme/anduwet/4,20"
 >
-    Invítanos a un café
-    <i class="fa-solid fa-mug-hot fa-fw" aria-hidden="true"></i>
+    Invítanos a una kombucha
+    <i class="fa-solid fa-face-smile-beam fa-fw" aria-hidden="true"></i>
 </a>
