--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: default
 {% endif %}
 <!-- End Featured Image -->
 
-<div class="mx-auto">
+<div class="col-lg-10 col-md-12 mx-auto">
 
   <div class="mainheading">
     <h1 class="posttitle text-center mb-3">
