--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,10 @@
                 {% include paypal.html %}
             {% endcomment %}
 
+            <!-- https://ko-fi.com/permaprendices -->
+            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+            <script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#D1D1B6', 'D1D85ES3');kofiwidget2.draw();</script> 
+
             {% include boton_paypal.html %}
         </div>
     </div>
